--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,30 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+.Home {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 0.25fr 1fr;
+  grid-gap: 5px;
+
+  height: 100vh;
+  margin: 0;
+  font-family: Helvetica;
+  background-color: rgb(255, 192, 203, 0.5);
+}
+
+.Home aside,
+main {
+  background-color: whitesmoke;
+}
+
+.Posts h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Posts article {
+  margin: auto;
+  width: 65vw;
+  background-color: rgb(255, 192, 203, 0.25);
 }
