--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,6 @@
 
   height: 100vh;
   margin: 0;
-  font-family: Helvetica;
   background-color: rgb(255, 192, 203, 0.35);
 }
 
@@ -58,12 +57,14 @@ main {
   background-color: rgb(255, 192, 203, 0.25);
 }
 
-.New-Post {
-  margin-top: 5%;
+#User {
+  font-family: Helvetica;
+  font-size: 2em;
+  padding: 0.5em;
 }
 
-.New-Post h1 {
-  padding: 0.25em;
+.New-Post {
+  margin-top: 5%;
 }
 
 .New-Post article {
@@ -80,7 +81,8 @@ input {
 }
 
 .New-Post input {
-  font-size: 1.75em;
+  font-size: 1.5em;
+  font-weight: bold;
   border-bottom: 1px solid goldenrod;
 }
 
@@ -88,9 +90,10 @@ input {
   font-size: 1.25em;
 }
 
-.New-Post button {
+#Save {
+  width: 30%;
   margin: 0.5em;
-  padding: 0.15em 2em;
+  padding: 0.25em;
   border: none;
   background-color: whitesmoke;
   font-size: 1.5em;
