--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,12 +14,13 @@
   margin: 0;
 }
 
-.Home header {
+#Home-Header {
   grid-column: span 2;
   margin-top: 0.5em;
   background-image: url('https://imgur.com/mTlkbMv.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: 100%;
 }
 
 .Title h1 {
@@ -31,7 +32,7 @@
 }
 
 .Home aside {
-  background: linear-gradient(#fdfdfd, #7cc2da);
+  background: linear-gradient(white, lightblue);
   margin-top: 0.5em;
   border-radius: 20px;
   text-align: center;
@@ -66,6 +67,11 @@
   margin-bottom: 0;
 }
 
+.Post-Header {
+  background-color: #fde6ee;
+  background-image: none;
+}
+
 .Posts article {
   width: 55vw;
   margin-left: 4em;
@@ -77,7 +83,7 @@
   font-family: Helvetica;
   font-size: 2em;
   padding: 0.5em;
-  color: aliceblue;
+  color: black;
 }
 
 .New-Post {
@@ -102,23 +108,37 @@ input {
   font-size: 1.5em;
   font-weight: bold;
   border-bottom: 1px solid goldenrod;
-  background-color: aliceblue;
+  background-color: whitesmoke;
 }
 
 .New-Post textarea {
   font-size: 1.25em;
-  background-color: aliceblue;
+  background-color: whitesmoke;
 }
 
-#Save {
+#Create {
   width: 30%;
   margin: 0.5em;
   padding: 0.25em;
   border: none;
-  background-color: aliceblue;
+  background-color: whitesmoke;
   font-size: 1.5em;
 }
 
 .Edit {
+  height: 100vh;
   background-color: cornflowerblue;
+}
+
+.Edit form {
+  text-align: center;
+  display: block;
+}
+
+.Edit input {
+  display: block;
+}
+
+.Edit textarea {
+  width: 50vw;
 }
