--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
   text-transform: lowercase;
 }
 
-.Home {
+.App {
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 0.2fr 1fr;
@@ -31,7 +31,7 @@
   padding-bottom: 0.15em;
 }
 
-.Home aside {
+.App aside {
   background: linear-gradient(white, lightblue);
   margin-top: 0.5em;
   border-radius: 20px;
@@ -39,6 +39,7 @@
 }
 
 .Home main {
+  width: 60vw;
   margin-top: 0.5em;
   padding-top: 0.5em;
   border-radius: 20px;
