--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
 
 .App {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 0.2fr 1fr;
   grid-gap: 10px;
 
@@ -14,24 +14,27 @@
   margin: 0;
 }
 
-#Home-Header {
+.App header {
   grid-column: span 2;
-  margin-top: 0.5em;
   background-image: url('https://imgur.com/mTlkbMv.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 100%;
 }
 
-.Title h1 {
+.Header h1 {
   text-align: right;
   font-size: 3.5em;
-  padding-top: 0.15em;
-  padding-right: 0.35em;
-  padding-bottom: 0.15em;
+  color: rgba(248, 196, 23, 0.5);
 }
 
-.App aside {
+.Home {
+  display: grid;
+  grid-template-columns: 0.35fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.Home aside {
   background: linear-gradient(white, lightblue);
   margin-top: 0.5em;
   border-radius: 20px;
@@ -43,10 +46,6 @@
   margin-top: 0.5em;
   padding-top: 0.5em;
   border-radius: 20px;
-}
-
-.Title {
-  color: rgba(248, 196, 23, 0.5);
 }
 
 .SearchBar input {
