--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@
 
 .App header {
   grid-column: span 2;
-  background-image: url('https://imgur.com/mTlkbMv.jpg');
+  background-image: url('https://imgur.com/QtTY4ja.jpg');
   background-size: 100vw;
   background-repeat: no-repeat;
   background-position: 100%;
@@ -24,6 +24,8 @@
 
 .Header h1 {
   text-align: right;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
   font-size: 3.5em;
   color: rgba(248, 196, 23, 0.5);
 }
@@ -84,8 +86,8 @@
 
 .Posts article {
   width: 55vw;
-  margin-top: 0.5em;
-  margin-left: 4em;
+  margin-top: 1.5em;
+  margin-left: 2em;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
 }
@@ -149,6 +151,24 @@ input {
   font-size: 1.5em;
 }
 
+.Edit main {
+  width: 60vw;
+  margin: auto;
+  padding-top: 0.5em;
+  border-radius: 20px;
+}
+
+.Edit h1 {
+  font-size: 2.5em;
+}
+
+.Edit a {
+  display: block;
+  margin-top: 1em;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
 .Edit aside {
   background: linear-gradient(rgb(233, 240, 250), white);
   margin-top: 0.5em;
@@ -156,9 +176,14 @@ input {
   text-align: center;
 }
 
+#Edit-Search input {
+  font-size: 1em;
+  font-weight: normal;
+  border: none;
+  background-color: white;
+}
+
 .Edit input {
-  display: block;
-  width: 80%;
   font-size: 1.5em;
   font-weight: bold;
   border-bottom: 1px solid goldenrod;
@@ -169,6 +194,7 @@ input {
   width: 80%;
   font-size: 1.25em;
   background-color: whitesmoke;
+  border: none;
 }
 
 .Edit button {
