--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,11 +7,12 @@
 .App {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 0.2fr 1fr;
+  grid-template-rows: 0.25fr 1fr;
   grid-gap: 10px;
 
-  height: 100vh;
   margin: 0;
+  background-color: rgb(47, 62, 79);
+  height: 100vh;
 }
 
 .App header {
@@ -20,6 +21,7 @@
   background-size: 100vw;
   background-repeat: no-repeat;
   background-position: 100%;
+  height: 25vh;
 }
 
 .Header h1 {
@@ -38,6 +40,7 @@
 
   height: 100vh;
   margin: 0;
+  background-color: rgb(47, 62, 79);
 }
 
 .Edit {
@@ -48,7 +51,7 @@
 
   height: 100vh;
   margin: 0;
-  background-color: rgb(80, 91, 105);
+  background-color: rgb(47, 62, 79);
 }
 
 .Delete {
@@ -59,7 +62,7 @@
 
   height: 100vh;
   margin: 0;
-  background-color: rgb(80, 91, 105);
+  background-color: rgb(47, 62, 79);
 }
 
 .Created-Post {
@@ -70,38 +73,50 @@
 
   height: 100vh;
   margin: 0;
-  background-color: rgb(80, 91, 105);
+  background-color: rgb(47, 62, 79);
 }
 
 .Home main {
-  width: 60vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  width: 65vw;
   margin: auto;
   padding-top: 0.5em;
   border-radius: 20px;
+  height: 100vh;
+  background-color: rgb(47, 62, 79);
 }
 
 .Edit main {
   width: 60vw;
   height: 100vh;
   text-align: center;
-  margin: auto;
+  margin-top: 5%;
+  margin-left: 7em;
   padding-top: 0.5em;
   border-radius: 20px;
+  background-color: rgb(47, 62, 79);
 }
 
 .Delete main {
   font-size: 2em;
   margin-top: 2em;
+  background-color: rgb(47, 62, 79);
+  color: rgb(255, 248, 220, 0.7);
 }
 
 .Created-Post main {
   font-size: 2em;
-  margin-top: 2em;
+  margin-top: 0.75em;
+  background-color: rgb(47, 62, 79);
+  color: rgb(255, 248, 220, 0.7);
 }
 
 .Home aside {
-  background: rgb(189, 111, 39);
-  margin-top: 3.5em;
+  margin-top: 4em;
   border-radius: 20px;
   text-align: center;
   height: 75vh;
@@ -113,31 +128,44 @@
 }
 
 .Edit aside {
-  background: linear-gradient(rgba(222, 237, 248, 0.7), white);
-  margin-top: 3.5em;
+  margin-top: 4em;
   border-radius: 20px;
   text-align: center;
   height: 75vh;
+
+  background-image: url('https://imgur.com/L2cxx8r.jpg');
+  background-size: 100vh;
+  background-repeat: no-repeat;
+  background-position: 100%;
 }
 
 .Delete aside {
-  background: linear-gradient(rgba(222, 237, 248, 0.7), white);
-  margin-top: 3.5em;
+  margin-top: 4em;
   border-radius: 20px;
   text-align: center;
   height: 75vh;
+
+  background-image: url('https://imgur.com/L2cxx8r.jpg');
+  background-size: 100vh;
+  background-repeat: no-repeat;
+  background-position: 100%;
 }
 
 .Created-Post aside {
-  background: linear-gradient(rgba(222, 237, 248, 0.7), white);
-  margin-top: 3.5em;
+  margin-top: 4em;
   border-radius: 20px;
   text-align: center;
   height: 75vh;
+
+  background-image: url('https://imgur.com/L2cxx8r.jpg');
+  background-size: 100vh;
+  background-repeat: no-repeat;
+  background-position: 100%;
 }
 
 .Side h1 {
   font-size: 2.5em;
+  color: rgb(255, 248, 220, 0.7);
 }
 
 .Search input {
@@ -146,41 +174,59 @@
 
 .Links {
   font-size: 1.5em;
+  font-weight: bold;
+  color: rgb(255, 248, 220, 0.7);
 }
 
-.Posts {
-  margin-bottom: 2em;
+.Posts article {
+  max-width: 20vw;
+  margin-top: 2em;
+  padding-bottom: 0.5em;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.Posts header {
+  background-image: url('https://imgur.com/L2cxx8r.jpg');
+  background-size: 100vw;
+  background-repeat: no-repeat;
+  background-position: 100%;
+  padding: 0.5em;
+  border-radius: 20px 20px 0 0;
+  height: 15vh;
 }
 
 .Posts h3 {
   font-size: 2em;
-  margin-bottom: 0;
+  margin-bottom: -1em;
+  padding-left: 0.2em;
+  color: rgb(255, 248, 220, 0.7);
 }
 
-.Posts header {
-  background-color: #f8d2df;
-  background-image: none;
-  padding: 0.5em;
+#Author {
+  color: rgb(255, 248, 220, 0.7);
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-left: -0.3em;
 }
 
-.Posts article {
-  width: 55vw;
-  margin-top: 2em;
-  margin-left: 2em;
-  background-color: white;
-  border-radius: 10px;
+.Posts p {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
 
 .Posts a {
   font-size: 1.35em;
   text-decoration: none;
+  padding: 0.5em;
 }
 
 .Posts button {
-  font-size: 1.25em;
+  font-size: 1.35em;
   float: right;
   border: none;
   background-color: transparent;
+  padding-right: 0.75em;
 }
 
 #User {
@@ -188,7 +234,7 @@
   font-size: 2em;
   padding: 0.5em;
   margin-bottom: 0;
-  color: black;
+  color: rgb(255, 248, 220, 0.7);
 }
 
 .New-Post {
@@ -200,24 +246,28 @@
   height: 100vh;
 }
 
-.New-Post textarea,
-input {
+#New-Post-Title {
+  width: 55vw;
+  margin: auto;
+}
+
+.New-Post textarea {
+  width: 55vw;
+  margin: auto;
+  border: none;
+  padding: 0.25em;
+  font-size: 1.25em;
+  background-color: whitesmoke;
+}
+
+.New-Post input {
   width: 80%;
   margin: auto;
   border: none;
   padding: 0.25em;
-  background-color: white;
-}
-
-.New-Post input {
   font-size: 1.5em;
   font-weight: bold;
   border-bottom: 1px solid goldenrod;
-  background-color: whitesmoke;
-}
-
-.New-Post textarea {
-  font-size: 1.25em;
   background-color: whitesmoke;
 }
 
@@ -226,12 +276,14 @@ input {
   margin: 0.5em;
   padding: 0.25em;
   border: none;
-  background-color: whitesmoke;
+  background-image: url('https://imgur.com/L2cxx8r.jpg');
+  color: whitesmoke;
   font-size: 1.5em;
 }
 
 .Edit h1 {
   font-size: 2.5em;
+  color: rgb(255, 248, 220, 0.7);
 }
 
 .Edit a {
@@ -239,9 +291,11 @@ input {
   margin-top: 1em;
   font-size: 1.5em;
   text-decoration: none;
+  color: rgb(255, 248, 220, 0.7);
 }
 
 #Edit-Search input {
+  width: fit-content;
   font-size: 1em;
   font-weight: normal;
   border: none;
@@ -249,6 +303,9 @@ input {
 }
 
 .Edit input {
+  width: 55vw;
+  margin: auto;
+  border: none;
   font-size: 1.5em;
   font-weight: bold;
   border-bottom: 1px solid goldenrod;
@@ -256,7 +313,8 @@ input {
 }
 
 .Edit textarea {
-  width: 80%;
+  width: 55vw;
+  margin: auto;
   font-size: 1.25em;
   background-color: whitesmoke;
   border: none;
@@ -272,12 +330,15 @@ input {
   margin: auto;
   padding: 0.25em;
   border: none;
-  background-color: whitesmoke;
+  background-image: url('https://imgur.com/L2cxx8r.jpg');
+  color: whitesmoke;
   font-size: 1.5em;
+  font-weight: bold;
 }
 
 .Delete h1 {
   font-size: 2.5em;
+  color: rgb(255, 248, 220, 0.7);
 }
 
 .Delete input {
@@ -289,10 +350,12 @@ input {
   margin-top: 1em;
   font-size: 1.5em;
   text-decoration: none;
+  color: rgb(255, 248, 220, 0.7);
 }
 
 .Created-Post h1 {
   font-size: 2.5em;
+  color: rgb(255, 248, 220, 0.7);
 }
 
 .Created-Post input {
@@ -304,4 +367,10 @@ input {
   margin-top: 1em;
   font-size: 1.5em;
   text-decoration: none;
+  color: rgb(255, 248, 220, 0.7);
+}
+
+.Robin {
+  max-height: 50%;
+  max-width: 65%;
 }
