--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,7 +80,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
 
   width: 65vw;
   margin: auto;
